# actor-vector-database-integrations

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  docker_build.sh  docker_run.sh
.github/workflows/: main.yml
actors/chroma/: README.md
actors/chroma/.actor/: actor.json  input_schema.json
actors/milvus/: README.md
actors/milvus/.actor/: actor.json  input_schema.json
actors/opensearch/: README.md
actors/opensearch/.actor/: actor.json  input_schema.json
actors/pgvector/: README.md
actors/pgvector/.actor/: actor.json  input_schema.json
actors/pinecone/: README.md
actors/pinecone/.actor/: actor.json  input_schema.json
actors/qdrant/: README.md
actors/qdrant/.actor/: actor.json  input_schema.json
actors/vectorx/.actor/: actor.json  input_schema.json
actors/weaviate/: README.md
actors/weaviate/.actor/: actor.json  input_schema.json
code/: .env.example  .gitignore  Makefile  pyproject.toml
code/src/: __main__.py  _types.py  base.py  constants.py  core.py  emb.py  entrypoint.py  main.py  utils.py  vcs.py
code/src/examples/: 2024-05-10-chromadb.py  2024-05-30-chromadb.py  2024-05-31-pinecone.py  2024-06-12-qdrant.py  2024-06-16-chromadb-actor.py  2024-06-16-pinecone-actor.py  2024-06-16-qdrant-actor.py  2024-06-20-pgvector.py  2024-06-20-qdrant.py  2024-06-25-test_actor.py  2024-06-25-weaviate.py  2024-07-08-milvus.py  2024-08-26-vectorx.py  2024-09-09-milvus-actor.py  2024-09-26-opensearch.py  2025-02-24-pinecone-prefix.py  data_examples.py  data_examples_uuid.py
code/src/models/: __init__.py  chroma_input_model.py  milvus_input_model.py  opensearch_input_model.py  pgvector_input_model.py  pinecone_input_model.py  qdrant_input_model.py  vectorx_input_model.py  weaviate_input_model.py
code/src/store_vector_db/: __main__.py  constants.py  emb.py  entrypoint.py  exceptions.py  main.py  utils.py  vcs.py
code/src/store_vector_db/models/: chroma_input_model.py  pinecone_input_model.py
code/src/store_vector_db/vector_stores/: base.py  chroma.py  pinecone.py
code/src/vector_stores/: __init__.py  base.py  chroma.py  milvus.py  opensearch.py  pgvector.py  pinecone.py  qdrant.py  vectorx.py  weaviate.py
code/tests/: __init__.py  conftest.py  test_chroma_batch.py  test_pinecone_namespace.py  test_utils.py  test_vector_stores.py
code/tests/cassettes/: test_add_newly_crawled_data[db_chroma].yaml  test_add_newly_crawled_data[db_milvus].yaml  test_add_newly_crawled_data[db_pgvector].yaml  test_add_newly_crawled_data[db_pinecone].yaml  test_add_newly_crawled_data[db_qdrant].yaml  test_add_newly_crawled_data[db_weaviate].yaml  test_delete_updated_data[db_chroma].yaml  test_delete_updated_data[db_milvus].yaml  test_delete_updated_data[db_pgvector].yaml  test_delete_updated_data[db_pinecone].yaml  test_delete_updated_data[db_qdrant].yaml  test_delete_updated_data[db_weaviate].yaml  test_deleted_expired_data[db_chroma].yaml  test_deleted_expired_data[db_milvus].yaml  test_deleted_expired_data[db_pgvector].yaml  test_deleted_expired_data[db_pinecone].yaml  test_deleted_expired_data[db_qdrant].yaml  test_deleted_expired_data[db_weaviate].yaml  test_deleted_orphaned_data[db_chroma].yaml  test_deleted_orphaned_data[db_pinecone].yaml  test_get_by_item_id[db_chroma].yaml  test_get_by_item_id[db_milvus].yaml  test_get_by_item_id[db_pgvector].yaml  test_get_by_item_id[db_pinecone].yaml  test_get_by_item_id[db_qdrant].yaml  test_get_by_item_id[db_weaviate].yaml  test_get_delete_all[db_chroma].yaml  test_get_delete_all[db_milvus].yaml  test_get_delete_all[db_pgvector].yaml  test_get_delete_all[db_pinecone].yaml  test_get_delete_all[db_qdrant].yaml  test_get_delete_all[db_weaviate].yaml  test_namespace.yaml  test_namespace_add.yaml  test_update_db_with_crawled_data[db_chroma].yaml  test_update_db_with_crawled_data[db_pinecone].yaml  test_update_db_with_crawled_data[db_qdrant].yaml  test_update_db_with_crawled_data_all[db_chroma].yaml  test_update_db_with_crawled_data_all[db_milvus].yaml  test_update_db_with_crawled_data_all[db_pgvector].yaml  (+11 more)
examples/: 2024-05-10-chromadb.py  2024-05-10-supported_dbs.py  2024-05-22-apify-pinecone-notebook.ipynb  2024-05-22-apify-pinecone-notebook.py  2024-05-30-chromadb.py  2024-05-31-pinecone.py  data_examples.py
shared/: CHANGELOG.md  Dockerfile  dataset_schema.json
